--- a/Day24/OWN.html
+++ b/Day24/OWN.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Own.css" />
-    <script src="https://kit.fontawesome.com/3a2f5f352b.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/3a2f5f352b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
+    <div class="content-1">
     <div>
       <img src="LOGO.png" height="70px" width="240px" class="Logo" />
     </div>
     <div>
       <ul>
-        <li><span style="color: rgb(2, 69, 56)">Home</span></li>
+        <li>
+          <a href="#home"><span style="color: rgb(2, 69, 56)">Home</span></a>
+        </li>
         <li>Services</li>
         <li>About</li>
         <li>Contact</li>
@@ -36,117 +42,256 @@
         and stick to commitmentsand deadlines.
       </p>
     </div>
-    <div class="Second_Main_div">
-      <h1 class="question">What We Do?</h1>
-      <br />
-      <p class="Doing_things">
-        We at CABIINET DESIGNS have redefined engineering of<br />
-        spaces, executing it with engineering precision, creating<br />
-        aesthetic and functional ambiences.
-      </p>
-      <br /><br /><br /><br />
-      <h1 style="font-size: 50px; margin-left: 70px">20%</h1>
-      <h1 style="font-size: 50px; margin-left: 260px; margin-top: -90px">
-        100%
-      </h1>
-      <h1 style="font-size: 50px; margin-left: 470px; margin-top: -90px">
-        10+
-      </h1>
-      <br />
-      <h3 style="margin-left: 60px; margin-top: -20px; font-size: 20px">
-        Fast Delivery
-      </h3>
-      <h3 style="margin-left: 270px; margin-top: -40px; font-size: 20px">
-        Satisfication
-      </h3>
-      <h3 style="margin-left: 440px; margin-top: -40px; font-size: 20px">
-        Happy Customers
-      </h3>
-      <img src="quality.jpeg" height="600px" width="550px" class="Quality" />
+    <div id="home">
+      <div class="Second_Main_div">
+        <h1 class="question">What We Do?</h1>
+        <br />
+        <p class="Doing_things">
+          We at CABIINET DESIGNS have redefined engineering of<br />
+          spaces, executing it with engineering precision, creating<br />
+          aesthetic and functional ambiences.
+        </p>
+        <br /><br /><br /><br />
+        <h1 style="font-size: 50px; margin-left: 70px">20%</h1>
+        <h1 style="font-size: 50px; margin-left: 260px; margin-top: -90px">
+          100%
+        </h1>
+        <h1 style="font-size: 50px; margin-left: 470px; margin-top: -90px">
+          10+
+        </h1>
+        <br />
+        <h3 style="margin-left: 60px; margin-top: -20px; font-size: 20px">
+          Fast Delivery
+        </h3>
+        <h3 style="margin-left: 270px; margin-top: -40px; font-size: 20px">
+          Satisfication
+        </h3>
+        <h3 style="margin-left: 440px; margin-top: -40px; font-size: 20px">
+          Happy Customers
+        </h3>
+        <img src="quality.jpeg" height="600px" width="550px" class="Quality" />
+      </div>
+      <div>
+        <h1 class="Services">Our Professional Services</h1>
+        <div class="Things">
+          <img
+            src="taj.jpeg"
+            height="300px"
+            width="150px"
+            class="Service_One"
+          />
+          <img
+            src="irfan.jpeg"
+            height="300px"
+            width="150px"
+            class="Service_Two"
+          />
+          <img
+            src="Nice.jpeg"
+            height="300px"
+            width="150px"
+            class="Service_Three"
+          />
+        </div>
+      </div>
     </div>
-    <div>
-      <h1 class="Services">Our Professional Services</h1>
-      <div class="Things">
-        <img src="taj.jpeg" height="300px" width="150px" class="Service_One"/>
-        <img src="irfan.jpeg" height="300px" width="150px" class="Service_Two"/>
-        <img src="Nice.jpeg" height="300px" width="150px" class="Service_Three"/>
-      </div>
-      </div>
     </div>
     <div class="Service_Head">
-        <h2 class="Idesign">Interior Design</h2>
-        <h2 class="Wall">Wall Panelling</h2>
-        <h2 class="Modul">Modular Kitchen</h2>
+      <h2 class="Idesign">Interior Design</h2>
+      <h2 class="Wall">Wall Panelling</h2>
+      <h2 class="Modul">Modular Kitchen</h2>
     </div>
     <div>
-        <p class="Para_One">Lorem ipsum dolar sit amet,<br>
-        consectetur adipiscing elit.</p>
-        <p class="Para_Two">Lorem ipsum dolar sit amet,<br>
-        consectetur adipiscing elit.</p>
-        <p class="Para_Three">Lorem ipsum dolar sit amet,<br>
-        consectetur adipiscing elit.</p>
+      <p class="Para_One">
+        Lorem ipsum dolar sit amet,<br />
+        consectetur adipiscing elit.
+      </p>
+      <p class="Para_Two">
+        Lorem ipsum dolar sit amet,<br />
+        consectetur adipiscing elit.
+      </p>
+      <p class="Para_Three">
+        Lorem ipsum dolar sit amet,<br />
+        consectetur adipiscing elit.
+      </p>
     </div>
     <div class="Client_Div">
-        <h1 class="Client">Take a look at Our Clients</h1>
-        <p class="Client_Detail">We've worked and continue to with several happy clients including</p>
-        <div class="Client_Pic">
-          <img src="https://images.unsplash.com/photo-1501183638710-841dd1904471?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80" height="125px" width="145px" class="Pic_One">
-          <img src="https://images.unsplash.com/photo-1505691723518-36a5ac3be353?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aG9tZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_Two">
-          <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" height="125px" width="145px" class="Pic_Three">
-          <img src="https://images.unsplash.com/photo-1606761568499-6d2451b23c66?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80" height="125px" width="145px" class="Pic_Four">
-          <img src="https://images.unsplash.com/photo-1604596945039-ae16232adb94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDV8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_Five">
-                    
-        </div>
-        <p class="Pic_One1">Diksha House</p>
-        <p class="Pic_One2">VERNA KITCHEN</p>
-        <p class="Pic_One3">Gabriel House</p>
-        <p class="Pic_One4">APJ College</p>
-        <p class="Pic_One5">AY Foods</p>
-        <br><br><br><br>
-        <div>
-
-          <img src="https://images.unsplash.com/photo-1587825140708-dfaf72ae4b04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_One">
-          <img src="https://images.unsplash.com/photo-1561489396-888724a1543d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_Two">
-          <img src="https://images.unsplash.com/photo-1486744328743-c1151100a95b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXx5LXJ5V0h4OEhVa3x8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_Three">
-          <img src="https://images.unsplash.com/photo-1606857521015-7f9fcf423740?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvbXBhbnl8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" height="125px" width="145px" class="Pic_Four">
-          <img src="https://images.unsplash.com/photo-1554232456-8727aae0cfa4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80" height="125px" width="145px" class="Pic_Five">
-          <p class="Pic_One6">Mall Audi</p>
-          <p class="Pic_One7">VYun Group</p>
-          <p class="Pic_One8">UB INter</p>
-          <p class="Pic_One9">IT Soft</p>
-          <p class="Pic_One10">Library</p>
-        </div>
-    </div><br><br>
+      <h1 class="Client">Take a look at Our Clients</h1>
+      <p class="Client_Detail">
+        We've worked and continue to with several happy clients including
+      </p>
+      <div class="Client_Pic">
+        <img
+          src="https://images.unsplash.com/photo-1501183638710-841dd1904471?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+          height="125px"
+          width="145px"
+          class="Pic_One"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1505691723518-36a5ac3be353?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8aG9tZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_Two"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+          height="125px"
+          width="145px"
+          class="Pic_Three"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1606761568499-6d2451b23c66?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1974&q=80"
+          height="125px"
+          width="145px"
+          class="Pic_Four"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1604596945039-ae16232adb94?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDV8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_Five"
+        />
+      </div>
+      <p class="Pic_One1">Diksha House</p>
+      <p class="Pic_One2">VERNA KITCHEN</p>
+      <p class="Pic_One3">Gabriel House</p>
+      <p class="Pic_One4">APJ College</p>
+      <p class="Pic_One5">AY Foods</p>
+      <br /><br /><br /><br />
+      <div>
+        <img
+          src="https://images.unsplash.com/photo-1587825140708-dfaf72ae4b04?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDd8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_One"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1561489396-888724a1543d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_Two"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1486744328743-c1151100a95b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8MXx5LXJ5V0h4OEhVa3x8ZW58MHx8fHx8&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_Three"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1606857521015-7f9fcf423740?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGNvbXBhbnl8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+          height="125px"
+          width="145px"
+          class="Pic_Four"
+        />
+        <img
+          src="https://images.unsplash.com/photo-1554232456-8727aae0cfa4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=435&q=80"
+          height="125px"
+          width="145px"
+          class="Pic_Five"
+        />
+        <p class="Pic_One6">Mall Audi</p>
+        <p class="Pic_One7">VYun Group</p>
+        <p class="Pic_One8">UB INter</p>
+        <p class="Pic_One9">IT Soft</p>
+        <p class="Pic_One10">Library</p>
+      </div>
+    </div>
+    <br /><br />
     <div class="Recent_Div">
       <h1 class="Recent_Project">Our Recent Projects</h1>
-      <img src="Pink.jpeg" height="400px" width="240px" class="Img_One">
-      <img src="handwash.jpeg" height="400px" width="240px" class="Img_Two">
-      <img src="premium.jpeg" height="400px" width="240px" class="Img_Three">
-      <img src="white chair.jpeg" height="400px" width="240px" class="Img_Four">
-      <img src="Bed room.jpeg" height="400px" width="240px" class="Img_Five">
-    </div><br><br>
+      <img src="Pink.jpeg" height="400px" width="240px" class="Img_One" />
+      <img src="handwash.jpeg" height="400px" width="240px" class="Img_Two" />
+      <img src="premium.jpeg" height="400px" width="240px" class="Img_Three" />
+      <img
+        src="white chair.jpeg"
+        height="400px"
+        width="240px"
+        class="Img_Four"
+      />
+      <img src="Bed room.jpeg" height="400px" width="240px" class="Img_Five" />
+    </div>
+    <br /><br />
     <div class="End_Div">
-      <img src="LOGO.png" height="80px" width="200px" style="margin-left: 60px; margin-top: 40px; border-radius: 10px;">
-      <p style="color: white; font-size: larger; font-weight: bolder; margin-left: 60px;">Cabbinet Designs do business with a touch of art</p>
-      <i class="fa-brands fa-instagram" style="color: #f7f7f7; font-size: 50px; margin-left: 100px; margin-top: 50px;"></i>
-      <i class="fa-brands fa-facebook" style="color: #f5f5f5; font-size: 50px; margin-left: 30px;"></i>
-      <i class="fa-brands fa-twitter" style="color: #f2f2f3;font-size: 50px; margin-left: 30px;"></i>
-    <div class="House_Div">
-      <i class="fa-solid fa-house" style="color: #ffffff; font-size: 40px; margin-left: 650px; position: relative; bottom: 250px;"></i>
-      <div class="Address_Div">
-      <p class="Address">Cabbinet Designers, 100 Feet Road,Gandhipuram<br>Coimbatore.</p>
+      <img
+        src="LOGO.png"
+        height="80px"
+        width="200px"
+        style="margin-left: 60px; margin-top: 40px; border-radius: 10px"
+      />
+      <p
+        style="
+          color: white;
+          font-size: larger;
+          font-weight: bolder;
+          margin-left: 60px;
+        "
+      >
+        Cabbinet Designs do business with a touch of art
+      </p>
+      <i
+        class="fa-brands fa-instagram"
+        style="
+          color: #f7f7f7;
+          font-size: 50px;
+          margin-left: 100px;
+          margin-top: 50px;
+        "
+      ></i>
+      <i
+        class="fa-brands fa-facebook"
+        style="color: #f5f5f5; font-size: 50px; margin-left: 30px"
+      ></i>
+      <i
+        class="fa-brands fa-twitter"
+        style="color: #f2f2f3; font-size: 50px; margin-left: 30px"
+      ></i>
+      <div class="House_Div">
+        <i
+          class="fa-solid fa-house"
+          style="
+            color: #ffffff;
+            font-size: 40px;
+            margin-left: 650px;
+            position: relative;
+            bottom: 250px;
+          "
+        ></i>
+        <div class="Address_Div">
+          <p class="Address">
+            Cabbinet Designers, 100 Feet Road,Gandhipuram<br />Coimbatore.
+          </p>
+        </div>
+        <i
+          class="fa-solid fa-phone"
+          style="
+            color: #ffffff;
+            font-size: 40px;
+            margin-left: 650px;
+            position: relative;
+            bottom: 280px;
+          "
+        ></i>
+        <div class="Phone_Div">
+          <p class="Address">+91 98765 43216</p>
+        </div>
+        <i
+          class="fa-solid fa-envelope"
+          style="
+            color: #fafafa;
+            font-size: 40px;
+            margin-left: 650px;
+            position: relative;
+            bottom: 255px;
+          "
+        ></i>
+        <div class="Mail_Div">
+          <p class="Address">cabinetdesign@gmail.com</p>
+        </div>
+      </div>
+      <p style="color: white; margin-top: 60px; margin-left: 600px">
+        Copyright 2023 - Cabbinet Designs
+      </p>
     </div>
-      <i class="fa-solid fa-phone" style="color: #ffffff; font-size: 40px; margin-left: 650px; position: relative; bottom: 280px;"></i>
-      <div class="Phone_Div">
-      <p class="Address">+91 98765 43216</p>
-    </div >
-      <i class="fa-solid fa-envelope" style="color: #fafafa; font-size: 40px; margin-left: 650px; position: relative; bottom: 255px;"></i>
-      <div class="Mail_Div">
-      <p class="Address">cabinetdesign@gmail.com</p>
-    </div>
-    </div>
-    <p style="color: white; margin-top: 60px; margin-left: 600px;">
-      Copyright 2023 - Cabbinet Designs</p>
   </div>
   </body>
 </html>
