--- a/Day29/class.html
+++ b/Day29/class.html
@@ -26,7 +26,7 @@
         <div class="col-12 Cus-Navbar">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <img src="" alt="">
+                <img src="" alt="" height="200px" width="200px">
               <button
                 class="navbar-toggler"
                 type="button"
@@ -153,6 +153,29 @@
 
 
 
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col- col-sm- col-md-6 col-lg- col-xl- col-xxl- d-flex justify-content-evenly">
+        <div>
+          <iframe src="https://www.youtube.com/embed/szvt1vD0Uug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col- col-sm- col-md-6 col-lg- col-xl- col-xxl- d-flex justify-content-evenly">
+        <div>
+          <iframe src="https://www.youtube.com/embed/szvt1vD0Uug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col- col-sm- col-md-6 col-lg- col-xl- col-xxl- d-flex justify-content-evenly">
+        <div>
+          <iframe src="https://www.youtube.com/embed/szvt1vD0Uug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col- col-sm- col-md-6 col-lg- col-xl- col-xxl- d-flex justify-content-evenly">
+        <div>
+          <iframe src="https://www.youtube.com/embed/szvt1vD0Uug" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </body>
