--- a/Day29/goa-task.html
+++ b/Day29/goa-task.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="goa-task.css">
   </head>
   <body>
+    
     <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -19,10 +20,10 @@
             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c1-img.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c2-img.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="..." class="d-block w-100" alt="...">
+            <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-c3-img.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -33,12 +34,61 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+      </div><br>
+    
+
+      <div class="container">
+        <div class="row">
+
+          <!-- goa about -->
+          <div class=" ">
+            <h1>About</h1>
+            <p>Goa is known for its striking landsape, famous beaches in India, astounding mnuments and churches and bustling Goa nightlife Goa is one of thhe most visited tourist places in india, especially on weekends, as it is not very far from Mumbai and having Panaji as its capital and Vasco da Gama as the alrgest city. It attracts a large number of tourists from all over the worls round the year.</p>
+          </div>
+
+          <!-- More pictures -->
+          <h1>More Picturs</h1>
+
+
+<div class="row">
+  <div class="col-4 col-sm-4 col-xs-12 col-lg-4 ">
+    <img class="image-fluid w-100 " src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more1-img.png"/>
+
+  </div>
+  <div class="col-4 col-sm-4 col-xs-12 col-lg-4 ">
+    <img class="image-fluid w-100" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more3-img.png"/>
+
+  </div>
+  <div class="col-4 col-sm-4 col-xs-12 col-lg-4 ">
+    <img class="image-fluid w-100" src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/goa-more2-img.png"/>
+
+  </div>
+
+  <h1>
+    Videos
+  </h1>
+
+  <div class="row ">
+    <div class="col-4 col-sm-4 col-xs-12 col-lg-4 ">
+      <iframe class="w-100 h-100" src="https://www.youtube.com/embed/3SnFtjCp4Ew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+    </div>
+    <div class="col-4 col-sm-4 col-xs-12 col-lg-4 video">
+      <iframe class="w-100 h-100" src="https://www.youtube.com/embed/3SnFtjCp4Ew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+    </div>
+    <div class="col-4 col-sm-4 col-xs-12 col-lg-4 video">
+      <iframe class="w-100 h-100" src="https://www.youtube.com/embed/3SnFtjCp4Ew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  
+    </div>
+
+
+</div>
+
+</div>
 
 
 
-
-    <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
   </body>
 </html>
