--- a/Day29/hotel-task.html
+++ b/Day29/hotel-task.html
@@ -4,27 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="GOA.css">
+    <link rel="stylesheet" href="hotel-task.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
   </head>
   <body>
     <div class="container-fluid p-0">
-    <div class="card col-12">
-        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/hotelbg.png" class="card-img-top" alt="...">
-        </div>
-        <div class="container-fluid p-0">
-        <div class="card-body col-12 p-5">
-          <h5 class="card-title">ROYAL GRAND HOTEL <br> R.K. Beach Visakhapattinam.</h5>
-          <p class="card-text card-title">Just Rs.1700/-</p>
-          <a href="#" class="btn btn-primary">Book Now</a>
+      <div class="card text-bg-dark">
+        <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/hotelbg.png" class="card-img hotel" alt="...">
+        <div class="card-img-overlay card-one" >
+          <h5 class="card-title">ROYAL GRAND HOTEL</h5>
+          <p class="card-text">R.K. Beach, Vishakapatinam</p>
+          <h5 class="card-title">1200/-</h5>
+          <button>Book Now</button>
         </div>
       </div>
-    </div>
-    </div>
   </body>
 </html>
