--- a/Day33/footer.html
+++ b/Day33/footer.html
@@ -1,78 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="vr-foot.css" />
-    <script
-      src="https://kit.fontawesome.com/3a2f5f352b.js"
-      crossorigin="anonymous"
-    ></script>
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="vr-foot.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+</head>
 
-    <footer class="text-white d-flex">
-      <div class="Main-Div">
-            <div class="pt-5">
-                <img
-                    src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png"
-                    alt="No image" height="50px" width="150px" />
-            </div><br>
-            <div class="mt-5">
-                <i class="fa-brands fa-instagram" style="color: #ffffff; font-size: 50px;"></i>
-                <i class="fa-brands fa-google ms-5" style="color: #ffffff; font-size: 50px;"></i>
-                <i class="fa-brands fa-twitter ms-5" style="color: #ffffff; font-size: 50px;"></i>
-                <!-- <i class="fa-brands fa-twitter" style="color: #ffffff; font-size: 50px;"></i> -->
+<body>
+  <div class="container mt-5 ">
+    <div class="row justify-content-between bg-dark text-white">
+      <div class="border2 col-12 col-sm-12 col-md-4 col-lg-3 col-xl-3 col-xxl-3">
+        <div class="container">
+          <div class="row">
+            <div class="logoimage col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 mt-5">
+              <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/vr-logo-img.png" alt="">
             </div>
-             <div class="mt-5">
-                <p class="fs-4 content">37, Aayur, Anbu Nagr, New Delhi, India</p>
+          </div><br>
+          <div class="container">
+            <div class="row">
+              <div class="icon1 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
+                <i class="bi bi-google"></i>
+              </div>
+              <div class="icon1 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
+                <i class="bi bi-twitter"></i>
+              </div>
+              <div class="icon1 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
+                <i class="bi bi-instagram"></i>
+              </div>
+              <div class="icon1 col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 col-xxl-3">
+                <i class="bi bi-linkedin"></i>
+              </div>
             </div>
-      </div>
-
-      <div class="Main-Div fs-2 ms-5">
-        <div class="Contact">
-            <h2>Contact Us</h2>
-            <i class="fa-solid fa-envelope" style="color: #f2f2f2; position: relative; top: 55px; left: -40px;"></i>
-            <p>amuthavanmoorthi@gmail.com</p>
-            <i class="fa-solid fa-phone" style="color: #ffffff; position: relative; top: 55px; left: -40px;"></i>
-            <p>9360017853</p>
-            <i class="fa-brands fa-skype" style="color: #ffffff; position: relative; top: 55px; left: -40px;"></i>
-            <p>Gabriel</p>
+          </div><br>
+          <div class="container">
+            <div class="row ">
+              <div class="para1 col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 mt-5">
+                <p class="para2">37, Ayur Vigyan Nagar, New Delhi, India.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="Let-us">
-        <div class="Main-Div fs-1">
-            <h2>Let Us Help You</h2><br>
-            <p>100% Purchase Protection</p>
-            <p>Your Account</p>
-            <p>Return Centre</p>
-            <p>Help</p>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+        <div class="border3">
+          <div class="container">
+            <h3 class="color2">Contact Us</h3><br>
+            <h5 class="color1"><i class="bi bi-envelope"></i>&nbsp; &nbsp; vr@gmail.com</h5><br>
+            <h5 class="color1"><i class="bi bi-telephone-fill"></i>&nbsp;&nbsp; 1234567890</h5><br>
+            <h5 class="color1"><i class="bi bi-skype"></i>&nbsp;&nbsp; Rahul</h5><br>
+          </div>
         </div>
       </div>
-
-    </footer>
-    <hr class="text-white">
-    <div>
-        <div class="Credits">
-            <hr class="text-white">
-            <i class="fa-solid fa-copyright" style="color: #ffffff; font-size: 30px; margin-right: 20px;"></i>
-            <p class="text-white">2023 Created by Gabriel. Used Bootstrap</p>
+      <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+        <div class="border4">
+          <div class="container">
+            <h3 class="color2">Let Us Help You</h3><br>
+            <h5 class="color1">100% purchase protection</h5><br>
+            <h5 class="color1">Your Account</h5><br>
+            <h5 class="color1">Return Centre </h5><br>
+            <h5 class="color1">Help </h5><br>
+          </div>
         </div>
       </div>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    </div>
+    <div class="container">
+      <hr>
+    </div>
+    <div class=" container col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+      <p class="text-center font1"><i class="bi bi-c-circle-fill"></i>2020 by Rahul. Created with Bootstrap</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
