--- a/Day33/Port-Nav.html
+++ b/Day33/Port-Nav.html
@@ -8,14 +8,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
     <link rel="stylesheet" href="Port-nav.css" />
   </head>
 
   <body class="bg-dark">
     <div class="container-fluid">
       <div class="row">
+
         <!-- NavBar  -->
 
         <div class="p-0 m-0">
@@ -23,8 +23,7 @@
             <div class="container-fluid">
               <a
                 class="navbar-brand border border-primary p-2 fs-3 ms-3"
-                href="#"
-                >J.</a>
+                href="#">J.</a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -68,17 +67,16 @@
         <!-- content  -->
 
         <div
-          class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-white ps-5 Main-Content"
-        >
+          class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 text-white order-2 ps-5 Main-Content">
           <h1>Hey, I am Amudhavan</h1>
           <p>I am a Front End Developer & Mentor</p>
           <button type="button" class="btn btn-primary">Contact me</button>
         </div>
 
-        <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 mt-5">
+        <div class="col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 order-1 mt-5">
           <img
             src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/portfolio-banner-img.png"
-            alt="No Image"/>
+            alt="No Image" height="100%" width="80%"/>
         </div>
       </div>
     </div>
