--- a/Day35/portfolio.html
+++ b/Day35/portfolio.html
@@ -24,15 +24,15 @@
         <nav>
           <h2 class="Logo">Port<span>folio</span></h2>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Certification</a></li>
-            <li><a href="#">Contact Me</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#certi">Certification</a></li>
+            <li><a href="#contact">Contact Me</a></li>
           </ul>
         </nav>
 
-        <div class="Content">
+        <div class="Content" id="home">
           <h4>Hello, I am</h4>
           <h1>Amudhavan</h1>
           <h3>I am <span>Python</span> Full Stack Developer</h3>
@@ -53,7 +53,7 @@
 
     <!-- About me  -->
 
-    <section class="About">
+    <section class="About" id="about">
       <div class="Main">
         <img src="Me.png" alt="" />
         <div class="About-Text">
@@ -74,7 +74,7 @@
 
     <!-- skills section  -->
 
-    <div class="service">
+    <div class="service" id="skills">
       <div class="title">
         <h2>My Skills</h2>
 
@@ -135,7 +135,7 @@
     <!-- Certificats  -->
 
 
-    <div>
+    <div id="certi">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -161,7 +161,7 @@
 
     <!-- Contact Me -->
 
-    <div class="contact-me">
+    <div class="contact-me" id="contact">
       <p>Let me Get You A Beautiful Website.</p>
       <a class="button-two" href="#">Hire Me</a>
     </div>
