--- a/Day35/portfolio.html
+++ b/Day35/portfolio.html
@@ -21,7 +21,7 @@
       <!-- nav bar  -->
 
       <div class="Navigation_Div">
-        <nav>
+        <nav class="fixed-top h-80">
           <h2 class="Logo">Port<span>folio</span></h2>
           <ul>
             <li><a href="#home">Home</a></li>
